infra/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gmontinny
  labels:
    app.kubernetes.io/name: gmontinny
