infra/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gmontinny-svc
  namespace: gmontinny
  labels:
    app: gmontinny
spec:
  selector:
    app: gmontinny
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
