infra/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gmontinny-ingress
  namespace: gmontinny
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: gmontinny.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gmontinny-svc
                port:
                  number: 80
  tls:
    - hosts:
        - gmontinny.example.com
      secretName: gmontinny-tls
